# wavecast

./: .gitignore  .mailmap  DOWNLOAD.md  LICENSE  NEW_DESIGN_PLAN.md  NEXT_SESSION_PROMPT.md  README.md  TIMELINE_EDITOR_IMPLEMENTATION_PLAN.md  index-new.html  index-old.html  index.html  make-round-icon-visible.sh  make-round-icon.sh  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: generate-dark-logo.js
src/: main.ts  styles-new.css  styles-new.css.bak  styles.css  styles.css.bak
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
