[package]
name = "wavecast"
version = "1.0.0"
description = "Transform audio into video, at scale. Bulk audio-to-video converter."
authors = ["Wavecast"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wavecast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ffmpeg-sidecar = "2.0.4"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
tokio = { version = "1", features = ["full"] }
image = "0.25"

